# muon

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.md  diesel.toml
docs/: agents.md  backend.md
examples/: muon.scaffold.toml  muon.toml
examples/agents/: clarifier.md  deep-orchestrator.md  intent-classifier.md  planner.md  researcher.md  shallow-researcher.md
migrations/2026-07-01-000001_initial/: down.sql  up.sql
src/: app.rs  cli.rs  error.rs  lib.rs  main.rs
src/application/: bridge.rs  deep_researcher.rs  deps.rs  mod.rs  pipeline.rs
src/application/config/: agent_def.rs  mod.rs  types.rs
src/application/pipeline_runner/: citation_verifier.rs  clarifier.rs  escalation.rs  finalize.rs  mod.rs  runner.rs
src/application/services/: export_service.rs  export_text.rs  markdown_exporter.rs  mod.rs  obsidian_exporter.rs  pdf_exporter.rs  rag_indexer_service.rs  report_builder.rs
src/application/session/: mod.rs  service.rs
src/config/: agent_config.rs  mod.rs  toml_config.rs
src/domain/: error.rs  json_extract.rs  mod.rs
src/domain/agents/: clarifier.rs  intent_classifier.rs  mod.rs  (+1 more)
src/infrastructure/: agent_stubs.rs  context.rs  mock.rs  mod.rs  observability.rs  providers.rs  source_registry.rs  util.rs
src/presentation/: click.rs  clipboard.rs  form.rs  mod.rs  render.rs  run.rs  state.rs  terminal.rs  theme.rs  types.rs
src/session/: mod.rs
tests/: agent_config.rs  citation_verifier.rs  clarifier_config.rs  config_scaffold.rs  deep_researcher_integration.rs  deep_researcher_mock.rs  empty_config_boot.rs  escalation.rs  export_pdf.rs  export_service.rs  export_text.rs  extract_json.rs  fetch_page_content.rs  fetch_url_guard.rs  models.rs  obsidian_exporter.rs  otel_attr.rs  pipeline_integration.rs  pipeline_mock.rs  plan_persist.rs  pool.rs  provider_resolve.rs  quality_gate.rs  query_input.rs  rag_indexer.rs  rag_store.rs  report_builder.rs  session_delete.rs  session_title.rs  source_registry.rs  stage_terminal.rs
tests/common/: mod.rs  stub_agent.rs
(+124 files in other folders)
