[package]
name = "muon"
version = "0.1.0"
edition = "2024"

[features]
default = []

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"

[profile.release]
opt-level = 3
codegen-units = 1
strip = true
lto = true

[dependencies]
ratatui = "0.30.2"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
async-trait = "0.1"
futures = "0.3"
quick-xml = "0.36"
anyhow = "1"
url = "2"
tracing = "0.1"
agent_rs = { path = "../agent_rs", features = ["rag", "opentelemetry"] }
pdf_oxide = "0.3"
diesel = { version = "2.3", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel-async = { version = "0.9", features = ["sqlite", "deadpool"] }
diesel_migrations = "2.3"
turbovec = "0.9"
regex = "1"
rig-core = "0.40"
rig-fastembed = "0.40"
noyalib = { version = "0.0.13", features = ["compat-serde-yaml"] }
reqwest = { version = "0.13", features = ["json", "rustls", "blocking"] }
dirs = "6"
clap = { version = "4", features = ["derive"] }
notify = "6"
notify-debouncer-mini = "0.5"
arboard = { version = "3.6", default-features = true, features = ["wayland-data-control"] }
tavily = "2.1.0"
firecrawl = "2.11.0"
serper-sdk = "0.1.3"

[dev-dependencies]
tempfile = "3"

